# sentinel-orchestrator-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  config.toml  docker-compose.yaml  openapi.yaml
.cursor/: .cursorrules
.cursor/rules/: agents_opencode.mdc  architecture.mdc  async-patterns.mdc  error-handling.mdc  performance.mdc  testing.mdc
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml  deploy.yml
benches/: api_response.rs  memory_consolidation.rs  message_processing.rs
config/: README.md
docs/: MAIN_BRANCH_SYNC.md  api.md  architecture.md  guide.md  prd.md  types.md  usage.md
docs/code-review/: api.mdx  frontend.mdx  phase1-phase2.mdx  security.mdx
docs/research/: rust_orchestrators_comparison.md
frontend/: Dockerfile  README.md  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/.cursor/: .cursorrules
frontend/.cursor/rules/: api.mdc  architecture.mdc  error-handling.mdc  performance.mdc  react.mdc  testing.mdc  typescript.mdc
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthGuard.tsx  ErrorBoundary.tsx  Skeleton.tsx
frontend/src/components/agents/: AgentCard.tsx  AgentDetails.tsx  StateMachineDiagram.tsx  index.ts
frontend/src/components/chaos/: ChaosGenerator.tsx  index.ts
frontend/src/components/chat/: MessageInput.tsx  MessageItem.tsx  MessageList.tsx  index.ts
frontend/src/components/docs/: DocLink.tsx  index.ts
frontend/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  index.ts
frontend/src/components/memory/: ConsolidationStatus.tsx  MemoryHierarchy.tsx  MemoryTierCard.tsx  index.ts
frontend/src/components/metrics/: BarChart.tsx  MetricCard.tsx  TimeSeriesChart.tsx  index.ts
frontend/src/components/ui/: ErrorDisplay.tsx  LoadingSpinner.tsx  index.ts
frontend/src/services/: agents.ts  api.ts  chat.ts  health.ts  metrics.ts
frontend/src/store/: auth.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/views/: Agents.tsx  CLI.tsx  Chaos.tsx  Chat.tsx  Config.tsx  Dashboard.tsx  Docs.tsx  Memory.tsx  Metrics.tsx  index.ts
frontend/tasks/: bridge.md  prd.md
production/: README.md
production/backup/: backup-all.sh  backup-postgres.sh  backup-qdrant.sh  backup-sled.sh  restore-postgres.sh
production/config/: env.production.template
production/docker/: Dockerfile.prod  docker-compose.prod.yaml
production/docs/: production-deployment.md
production/logging/: loki-config.yml  promtail-config.yml
production/monitoring/: prometheus-rules.yml  prometheus.yml
production/monitoring/grafana/dashboards/: main-dashboard.json
production/monitoring/grafana/provisioning/datasources/: loki.yml
production/nginx/: nginx.conf
production/runbooks/: deployment.md  incident-response.md
production/security/: security-hardening.md
production/testing/: load-test.sh  run-tests.sh
rs_cli/: Cargo.toml  README.md
rs_cli/src/: main.rs  types.rs
rs_cli/src/api/: client.rs  mod.rs
rs_cli/src/app/: handlers.rs  mod.rs  state.rs
rs_cli/src/modes/: mod.rs
rs_cli/src/ui/: components.rs  mod.rs
scripts/: generate-openapi.rs  setup-env.sh
src/: config.rs  lib.rs  main.rs
src/adapters/: mod.rs  openai.rs  qdrant.rs  sled.rs
src/api/: middleware.rs  mod.rs  routes.rs
src/core/: auth.rs  error.rs  mod.rs  traits.rs  types.rs
src/engine/: actor.rs  channels.rs  mod.rs  supervisor.rs
src/memory/: manager.rs  medium_term.rs  mod.rs  short_term.rs  token_counter.rs  triggers.rs
src/telemetry/: mod.rs
tasks/: backend-status.md  bridge.md  bridge_auth.md  errors.md  instructions.md  prd.md  production.md  start.md  task-10.md  task-11.md  task-12.md  task-13.md  task-14.md  task-16.md  task-17.md  task-2.md  task-3.md  task-4.md  task-5.md  task-6.md  task-7.md  task-8.md  task-9.md
tests/: adapter_boundaries.rs  integration_llm_providers.rs  integration_test.rs  integration_vector_storage.rs
