[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- Core (Async Runtime & HTTP) ---
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# --- Data & Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# --- AI & Infrastructure Drivers ---
# Use async-openai for types, but wrap it in adapters
async-openai = "0.23" 
qdrant-client = "1.10"
sled = "0.34"
reqwest = { version = "0.12", features = ["json", "stream"] }

# --- Error Handling & Configuration ---
thiserror = "1"     # For src/core
anyhow = "1"        # For src/bin & main.rs
config = "0.14"
secrecy = { version = "0.8", features = ["serde"] } # Protect API keys

# --- Observability (Critical for Agents) ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.22"

# --- Utils ---
async-trait = "0.1"
futures = "0.3"  # For Stream trait in core traits (minimal async primitive)
dotenvy = "0.15"

# --- OpenAPI / API Documentation ---
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
serde_yaml = "0.9"  # For generating openapi.yaml

[dev-dependencies]
mockall = "0.13"    # For unit testing traits
tokio-test = "0.4"
http-body-util = "0.1"  # For body utilities in tests
tempfile = "3"      # For temporary directories in tests

