[package]
name = "sentinel-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Terminal UI - ratatui is the most respected Rust TUI library
ratatui = "0.27"
crossterm = "0.28"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "color"] }

# HTTP client for backend communication
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Colors and formatting
colored = "2.1"
owo-colors = "4.0"

# Error handling
anyhow = "1"
thiserror = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for message IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Text input handling
tui-textarea = "0.4"

# Async streams
futures = "0.3"

# Configuration
config = "0.14"
dotenvy = "0.15"

